Fix alignment in header section

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     border: 2px solid black;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 6fr;
     grid-template-areas: 
     "sidebar header"
     "sidebar main";
@@ -56,6 +56,8 @@
 .header .user-info {
     grid-area: user-i;
     display: flex;
+    align-items: center;
+    padding-bottom: 10px;
 }
 
 .user-info img {
